--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\pc\\AppData\\Roaming\\NetBeans\\13\\tomcat90.properties
-j2ee.server.home=D:/apache-tomcat-10.0.27
-j2ee.server.instance=tomcat90:home=D:\\apache-tomcat-10.0.27
-user.properties.file=C:\\Users\\pc\\AppData\\Roaming\\NetBeans\\13\\build.properties
+deploy.ant.properties.file=C:\\Users\\HP\\AppData\\Roaming\\NetBeans\\13\\tomcat90.properties
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=E:\\PRJ301\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=E:\\PRJ301\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.sqljdbc42__1_.jar=E:\\PRJ301\\lib\\sqljdbc42.jar
+j2ee.server.home=E:/apache-tomcat-10.0.27
+j2ee.server.instance=tomcat90:home=E:\\apache-tomcat-10.0.27
+user.properties.file=C:\\Users\\HP\\AppData\\Roaming\\NetBeans\\13\\build.properties
